--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,11 +1,17 @@
 [supervisord]
 nodaemon=true
+logfile=/dev/null
+logfile_maxbytes=0
+loglevel=critical
+
 
 [program:gunicorn]
-command=gunicorn setup.wsgi:application --bind 0.0.0.0:8000
+command=gunicorn setup.wsgi:application --bind 0.0.0.0:8000 --access-logfile - --error-logfile - --log-level info
 directory=/app
 user=root
 autostart=true
 autorestart=true
-stderr_logfile=/var/log/gunicorn.err.log
-stdout_logfile=/var/log/gunicorn.out.log
+stdout_logfile=/dev/stdout
+stderr_logfile=/dev/stderr
+stdout_logfile_maxbytes=0
+stderr_logfile_maxbytes=0
